# ResolveFlow

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CODEX_FINAL_REPORT.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: pages.yml  release-evaluation.yml  validate.yml
apps/web/: .prettierignore  Dockerfile  package.json  server.mjs
automation/: COMMON.md  codex-result.schema.json  run-resolveflow-loop.sh
automation/prompts/: 00-plan.md  01-foundation.md  02-retrieval.md  03-agent-safety.md  04-actions-audit.md  05-replay-gate.md  06-public-validation.md  07-final-audit.md  08-publish.md
data/artifacts/: hostile-operator-note.md  payments-rollback-runbook-v2-stale.md  payments-rollback-runbook-v3.md  prior-incident-1042.json  restricted-legal-memo.md  rollout-records.csv
data/corpus/: hero-corpus-1.0.json
data/languages/: LANGUAGE_SIGNOFF.schema.json  exploratory-fr-1.0.json
data/manifests/: replay-role-downgrade-001.yaml  security-scenario-candidates-1.0.yaml
data/published/: hero-foundation-2b35111e081f54f8.json  hero-foundation-3268a6340677ffbc.json  hero-foundation-6723d76aabcee3db.json  hero-foundation-ac17b31cdda6944e.json  hero-foundation-de7af64110c678c4.json  replay-development-result.json.sha256
data/security/: prompt-injection-fixtures.json
data/splits/: replay-draft-splits-1.0.yaml
data/truths/: REVIEW_WORKFLOW.md  hero-payments-001.json  replay-base-truths-1.0.yaml  retrieval-calibration-1.0.json  retrieval-development-1.0.json
docs/: ACCEPTANCE_MATRIX.md  AUTOMATION_SETUP.md  CODEX_MASTER_PROMPT_ResolveFlow.md  CODEX_STATUS.md  DECISIONS.md  HUMAN_SIGNOFF.example.json  HUMAN_SIGNOFF.json  IMPLEMENTATION_PLAN.md  KNOWN_LIMITATIONS.md  RELEASE_CHECKLIST.md  SOURCE_NOTES.md  customer-brief.md  demo-script.md  deployment-runbook.md  privacy.md  threat-model.md
docs/adr/: ADR-001-replay-is-the-product-center.md  ADR-002-modular-monolith-plus-worker.md  ADR-003-postgresql-pgvector-and-fts.md  ADR-004-direct-cohere-sdk.md  ADR-005-authorization-before-retrieval.md  ADR-006-two-pass-evidence-graph.md  ADR-007-postgresql-durable-queue.md  ADR-008-approval-digest-and-idempotency.md  ADR-009-snapshot-first-and-staging-connectors.md  ADR-010-synthetic-dataset-provenance.md  ADR-011-english-first-claims.md  ADR-012-github-pages-zero-cost.md  README.md
docs/deployment-reports/: 2026-07-22-pages-9f81f86.md
docs/postmortems/: 2026-07-22-guarded-citation-sample.md
docs/restore-reports/: 2026-07-22-e30f567.md
docs/spec/: 00_ResolveFlow_Replay_Project_Overview_and_Feature_Catalog.md  01_Feature_01_Slack_style_intake_and_real_Slack_sandbox.md  02_Feature_02_deterministic_context_enrichment.md  03_Feature_03_corpus_ingestion_versioning_and_effective_time.md  04_Feature_04_pre_retrieval_authorization_and_role_switch.md  05_Feature_05_hybrid_retrieval_with_Embed_v4.md  06_Feature_06_Rerank_v4_Fast_Pro_decision_policy.md  07_Feature_07_bounded_Command_A_agent_loop.md  (+13 more)
migrations/: env.py
scripts/: check_release_profile.py  preflight.py  scan_public_build.py  verify.sh  verify_public_snapshots.py
tests/: __init__.py  action_helpers.py  agent_helpers.py
(+176 files in other folders)
